cabal-version:       2.2
name:                api-generators
version:             0.1.0.0
synopsis:            Example project
-- description:         Something a bit longer
homepage:            https://github.com/sorki/api-generators
license:             BSD-3-Clause
license-file:        LICENSE
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2021 Richard Marko
-- category:            Web
build-type:          Simple

extra-source-files:
    CHANGELOG.md
    LICENSE
    README.md

executable api-generators-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
  default-language:    Haskell2010

executable blockfrost-fix-collisions
  hs-source-dirs:      app
  main-is:             FixCollisions.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , directory
                     , text
                     , filemanip
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sorki/api-generators
